# ProiectPCD

./: .gitignore  CMakeLists.txt  Dockerfile.gen  app.c  client  client.c  conanfile.py  demo.cfg  server  server.c  test.Dockerfile
